Добавляет блок c карточками

--- a/source/index.html
+++ b/source/index.html
@@ -355,7 +355,284 @@
               </div>
 
               <ul class="catalog__list">
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-1.webp 1x, img/content/card-1@2x.webp 2x">
+                        <img src="img/content/card-1.png" srcset="img/content/card-1@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
 
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-2.webp 1x, img/content/card-2@2x.webp 2x">
+                        <img src="img/content/card-2.png" srcset="img/content/card-2@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-3.webp 1x, img/content/card-3@2x.webp 2x">
+                        <img src="img/content/card-3.png" srcset="img/content/card-3@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-4.webp 1x, img/content/card-4@2x.webp 2x">
+                        <img src="img/content/card-4.png" srcset="img/content/card-4@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-5.webp 1x, img/content/card-5@2x.webp 2x">
+                        <img src="img/content/card-5.png" srcset="img/content/card-5@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-6.webp 1x, img/content/card-6@2x.webp 2x">
+                        <img src="img/content/card-6.png" srcset="img/content/card-6@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-7.webp 1x, img/content/card-7@2x.webp 2x">
+                        <img src="img/content/card-7.png" srcset="img/content/card-7@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-8.webp 1x, img/content/card-8@2x.webp 2x">
+                        <img src="img/content/card-8.png" srcset="img/content/card-8@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button">
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="catalog__card card">
+                  <a class="card__link" href="#">
+                    <figure class="card__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/content/card-9.webp 1x, img/content/card-9@2x.webp 2x">
+                        <img src="img/content/card-9.png" srcset="img/content/card-9@2x.png 2x" width="130" height="188" alt="Изображение Декаф Флэт Уайт" loading="lazy">
+                      </picture>
+
+                      <figcaption>Декаф Флэт Уайт</figcaption>
+                    </figure>
+                  </a>
+
+                  <p class="card__info">Кофе без кофеина из Эфиопии с&nbsp;натуральным фермерским молоком</p>
+
+                  <div class="card__footer">
+                    <dl class="card__price">
+                      <dt class="visually-hidden">Цена</dt>
+
+                      <dd>225₽</dd>
+                    </dl>
+
+                    <button class="card__button button" type="button" disabled>
+                      <svg width="20" height="16">
+                        <use href="img/sprite.svg#card-cart-icon"></use>
+                      </svg>
+
+                      <span>В корзину</span>
+                    </button>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
