--- a/source/index.html
+++ b/source/index.html
@@ -688,6 +688,104 @@
       </section>
     </main>
 
+    <footer class="footer container">
+      <div class="footer__social">
+        <figure class="footer__logo">
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/logo-desktop.svg">
+            <img src="img/logo-tablet.svg" width="82" height="36" alt="Логотип компании Drink2Go." decoding="async">
+          </picture>
+
+          <figcaption>Интернет-магазин кофейных напитков</figcaption>
+        </figure>
+
+        <ul class="footer__social-list">
+          <li class="footer__social-item">
+            <a class="footer__social-link" href="#" rel="noopener" target="_blank">
+              <svg width="20" height="20">
+                <use href="img/sprite.svg#vk-icon"></use>
+              </svg>
+
+              <span class="visually-hidden">Ссылка на ВКонтакте</span>
+            </a>
+          </li>
+
+          <li class="footer__social-item">
+            <a class="footer__social-link" href="#" rel="noopener" target="_blank">
+              <svg width="22" height="22">
+                <use href="img/sprite.svg#pinterest-icon"></use>
+              </svg>
+
+              <span class="visually-hidden">Ссылка на Pinterest</span>
+            </a>
+          </li>
+
+          <li class="footer__social-item">
+            <a class="footer__social-link" href="#" rel="noopener" target="_blank">
+              <svg width="20" height="20">
+                <use href="img/sprite.svg#ok-icon"></use>
+              </svg>
+
+              <span class="visually-hidden">Ссылка на Одноклассники</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <nav class="footer__section footer__section--nav">
+        <strong class="footer__title">Интернет-магазин</strong>
+
+        <ul class="footer__list">
+          <li class="footer__list-item">
+            <a>Главная</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="#">Каталог</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="#">Способы оплаты</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="#">О нас</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__section footer__section--media">
+        <strong class="footer__title">Медиа</strong>
+
+        <ul class="footer__list">
+          <li class="footer__list-item">
+            <a href="#" rel="noopener" target="_blank">Блог</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="#" rel="noopener" target="_blank">Информация для СМИ</a>
+          </li>
+          <li class="footer__list-item">
+            <a href="#" rel="noopener" target="_blank">Правовая информация</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__section footer__section--contacts">
+        <strong class="footer__title">Контакты</strong>
+
+        <address>Санкт-Петербург, набережная реки Карповки, дом 5</address>
+
+        <a href="tel:+7 (999) 999-99-99">+7 (999) 999-99-99</a>
+      </div>
+
+      <p class="footer__academy">
+        Разработано в
+        <a href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" target="_blank">
+          <svg width="112" height="16">
+            <use href="img/sprite.svg#academy-icon"></use>
+          </svg>
+        </a>
+      </p>
+
+    </footer>
+
     <script src="js/script.min.js"></script>
   </body>
 </html>
