--- a/source/index.html
+++ b/source/index.html
@@ -751,7 +751,7 @@
         </ul>
       </div>
 
-      <nav class="footer__section footer__section--nav">
+      <nav class="footer__section">
         <strong class="footer__title">Интернет-магазин</strong>
 
         <ul class="footer__list">
@@ -770,7 +770,7 @@
         </ul>
       </nav>
 
-      <div class="footer__section footer__section--media">
+      <div class="footer__section">
         <strong class="footer__title">Медиа</strong>
 
         <ul class="footer__list">
